fix: minor style fixes
Make app ID readable for chosen app in AppSelect
Remove horizontal scrollbar for small windows on SelectorPage

--- a/src/components/app-select/app-select.module.css
+++ b/src/components/app-select/app-select.module.css
@@ -98,3 +98,7 @@
     margin-left: auto;
     color: var(--c-text-secondary);
 }
+
+.item--active small {
+    color: #fff;
+}
